fixing bug 197847 - Too many network errors should pause install, not automatically cancel it. r=dveditz, rs=sspitzer